--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1238,7 +1238,6 @@ details.post-content-details > summary > .details {
     filter: brightness(.75)contrast(1.37) opacity(0.97) saturate(1.17);
 }
 
-
 /* Community */
 .page-community .badge-container {
     text-align: center;
@@ -1246,10 +1245,45 @@ details.post-content-details > summary > .details {
     padding: 1em 0;
     border-radius: calc(var(--radius)/2);
 }
+/* About */
 .page-about-jamie #previous-jobs + table > tbody > tr > td:first-child {
     white-space: nowrap;
 }
+/* Screenshots */
+.page-screenshots .post-title,
+.page-screenshots .post-meta {
+    display: none;
+}
+.page-screenshots .chocolat-drop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.page-screenshots .chocolat-wrapper,
+.page-screenshots .chocolat-overlay {
+    background-color: #ffffff01;
+}
 
+.page-screenshots.chocolat-fullscreen .chocolat-wrapper,
+.page-screenshots.chocolat-fullscreen .chocolat-overlay {
+    background-color: var(--theme);
+}
+.page-screenshots .chocolat-wrapper .chocolat-bottom {
+    background-color: var(--header);
+    font-weight: 500;
+}
+.page-screenshots:not(.chocolat-fullscreen) .chocolat-wrapper .chocolat-bottom,
+.page-screenshots:not(.chocolat-fullscreen) .chocolat-close {
+    display: none;
+}
+.page-screenshots:not(.chocolat-fullscreen) .chocolat-wrapper .chocolat-top {
+    margin-bottom: 16vh;
+}
+.page-screenshots:not(.chocolat-fullscreen) .chocolat-wrapper .chocolat-bottom {
+    margin-top: 8vh;
+}
 
 
 /* Footer */
