--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,4 +1,4 @@
-{{- $footer := resources.Get "js/footer.js" | resources.ExecuteAsTemplate "js/footer.js" . | resources.Minify }}
+{{- $footer := resources.Get "js/extended/footer.js" | resources.ExecuteAsTemplate "js/extended/footer.js" . | resources.Minify }}
 <script defer crossorigin="anonymous" src="{{ $footer.RelPermalink }}"></script>
 <footer class="footer">
     <span>&copy; 1997 - {{ now.Year }} <a href="/">{{ site.Title }}</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Made with&nbsp;&nbsp;<i class="wm wm-heart"></i>&nbsp;&nbsp;by <a href="/about/#developers">@iliajie</a>&nbsp;&nbsp;|<wbr>&nbsp;&nbsp;Powered by Hugo & Papermod</span>
