--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -21,8 +21,8 @@
 {{- if .Param "loadGallery" }}
 {{- $chocolatjs := resources.Get "js/chocolat.js" | resources.Minify }}
 {{- $chocolatcss := resources.Get "css/chocolat.css" | resources.Minify }}
-<script type="text/javascript" src="{{ $chocolatjs.RelPermalink }}"></script>
-<link rel="stylesheet" href="{{ $chocolatcss.RelPermalink }}" type="text/css" media="screen">
+<script type="text/javascript" src="{{ $chocolatjs.RelPermalink }}?{{ now.Unix }}"></script>
+<link rel="stylesheet" href="{{ $chocolatcss.RelPermalink }}?{{ now.Unix }}" type="text/css" media="screen">
 {{- $chocolatloader := resources.Get "js/extended/header-chocolat.js" | resources.ExecuteAsTemplate "js/extended/header-chocolat.js" . | resources.Minify }}
-<script defer crossorigin="anonymous" src="{{ $chocolatloader.RelPermalink }}"></script>
+<script defer crossorigin="anonymous" src="{{ $chocolatloader.RelPermalink }}?{{ now.Unix }}"></script>
 {{ end }}
