--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -8,6 +8,9 @@
     --code-bg: rgb(235, 235, 235);
 
     --header: #043babf0;
+    
+    --link: #043bab;
+    
     --header-shadow: #00000040;
 
     --menu-active: #ffffff;
@@ -30,6 +33,8 @@
 
     --header: #2e2e33ee;
     
+    --link: #1d74ff;
+
     --menu-active: #444444;
     --menu-border: rgb(99, 99, 99);
     --menu-active-link: #625a4b9e;
@@ -1587,14 +1592,24 @@ html[class*="page-changelog"] .dark figure > img[src*="/light/"] {
     padding-left: 0.211rem;
 }
 
+.docs-toc a.active,
 .docs-menu a.active {
     font-weight: 700;
+}
+
+.docs-toc a.active {
+    color: var(--link);
+    letter-spacing: -0.012rem;
 }
 
 .docs-menu .docs-menu-content details > div,
 .docs-menu .docs-menu-content details,
 .docs-menu .docs-menu-content > div:not([id="searchbox"]) {
     margin: 0.211rem auto;
+}
+
+.docs-menu .docs-menu-content > div#searchbox {
+    margin-bottom: 1.333rem;
 }
 
 .docs-menu .docs-menu-content details > div {
