--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -2,7 +2,7 @@
 <!-- Forked from `themes/PaperMod/layouts/_default/list.html` file -->
 
 <!-- Insert docs tree (custom) -->
-{{ partial "doc_filetree" . }}
+{{ partial "docs_filetree" . }}
 
 <!-- Insert page content (standard) -->
 <article class="post-single">
@@ -26,11 +26,17 @@
     </div>
     {{- end }}
   </header>
+  <div class="asideMobile">
+    <div class="toc">
+      <details>
+        <summary accesskey="c" title="(Alt + C)"><span class="details">Menu</span></summary>
+        <div class="inner"></div>
+      </details>
+    </div>
+  </div>
   {{- $isHidden := .Params.cover.hidden | default site.Params.cover.hiddenInSingle | default site.Params.cover.hidden }}
   {{- partial "cover.html" (dict "cxt" . "IsHome" false "isHidden" $isHidden) }}
-  {{- if (.Param "ShowToc") }}
   {{- partial "toc.html" . }}
-  {{- end }}
 
   {{- if .Content }}
   <div class="post-content content-row">
@@ -46,6 +52,6 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 <!-- Insert custom docs TOC -->
-{{ partial "doc_toc.html" . }}
+{{ partial "docs_toc.html" . }}
 
 {{- end }}{{/* end main */}}
