Add to smaller font size for sub-section

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1624,6 +1624,10 @@ html[class*="page-changelog"] .dark figure > img[src*="/light/"] {
     padding-left: 0.211rem;
 }
 
+.docs-menu-content a {
+    font-size: 94%;
+}
+
 .docs-toc a.active,
 .docs-menu-content a.active {
     font-weight: 700;
