--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -55,9 +55,15 @@ html {
     scroll-padding-top: 4.666rem;
     overflow-y: auto;
 }
+
+html[data-nav="lg"] {
+    scroll-padding-top: calc(4.666rem * 1.911);
+}
+
 html body:not(.dark) {
     background-color: var(--main-bg);
 }
+
 body {
     font-family: "Roboto", -apple-system, BlinkMacSystemFont, segoe ui, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
     font-weight: 300;
