--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1496,6 +1496,11 @@ html[class*="page-docs"] article.post-single table tr > td code {
     font-size: 14.5px;
 }
 
+html[class*="page-docs"] a[href*="example.com"] {
+    pointer-events: none;
+    box-shadow: none;
+}
+
 /* Animations */
 @keyframes fadeIn {
   0% {
