Add Apache Webserver 5/5

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1504,9 +1504,11 @@ html[class*="page-docs"] article.post-single table tr > td code {
     font-size: 14.5px;
 }
 
+html[class*="page-docs"] a[href*="openssl.org"],
 html[class*="page-docs"] a[href*="example.com"] {
     pointer-events: none;
     box-shadow: none;
+    font-style: italic;
 }
 
 /* Animations */
